@@ -7,6 +7,7 @@
 - better im_shrink()
 - added vips_sequential()
 - new vips_sink_memory() keeps read ordering
+- tiff reader supports sequential read
 
 20/8/11 started 7.27.0
 - version bump for new dev cycle
